fix a layout issue on mobile

--- a/index.styl
+++ b/index.styl
@@ -19,6 +19,8 @@ nav
 .jumbotron
   height: 100%
   max-height: 640px
+  padding-left: 0px
+  padding-right: 0px
   margin-bottom: 0
   position: relative
   background: url(img/jumbotron.jpg) center center no-repeat #222
@@ -26,12 +28,10 @@ nav
   border-radius: 0
   .text-center
     position: absolute
-    top: 0
-    left: 0
-    right: 0
-    bottom: 0
+    width: 100%
+    top: 50%
     margin: auto
-    height: 210px
+    transform: translate(0, -50%);
 
 .section-telegram
   a.link
